--- a/widget.html
+++ b/widget.html
@@ -81,6 +81,9 @@
 
             border-radius: 56px 0 0 56px;
         }
+        #widget-0:hover {
+            box-shadow: 0 0 24px 4px;
+        }
     </style>
 
     <title>Document</title>
