--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 
@@ -92,7 +92,7 @@
 
     <main>
 
-        <!-- * Title -->
+        <!-- * Section 0 -->
 
         <div id="section-0" class="section">
             <div class="dot-box">
@@ -113,12 +113,9 @@
                 PRODUCTS
             </h1>
         </div>
-
-        <!-- * Section 0 -->
-
         <div class="accordion">
-            <div id="slide0" class="illustration">
-                <div class="wrapper">
+            <div id="slide-0" class="slide">
+                <div class="description">
                     <div class="category">
                         <h1>Urban</h1>
                     </div>
@@ -130,8 +127,8 @@
                     </div>
                 </div>
             </div>
-            <div id="slide1" class="illustration">
-                <div class="wrapper">
+            <div id="slide-1" class="slide">
+                <div class="description">
                     <div class="category">
                         <h1>Continental</h1>
                     </div>
@@ -143,8 +140,8 @@
                     </div>
                 </div>
             </div>
-            <div id="slide2" class="illustration">
-                <div class="wrapper">
+            <div id="slide-2" class="slide">
+                <div class="description">
                     <div class="category">
                         <h1>Performance</h1>
                     </div>
@@ -156,8 +153,8 @@
                     </div>
                 </div>
             </div>
-            <div id="slide3" class="illustration">
-                <div class="wrapper">
+            <div id="slide-3" class="slide">
+                <div class="description">
                     <div class="category">
                         <h1>Vintage</h1>
                     </div>
@@ -169,8 +166,8 @@
                     </div>
                 </div>
             </div>
-            <div id="slide4" class="illustration">
-                <div class="wrapper">
+            <div id="slide-4" class="slide">
+                <div class="description">
                     <div class="category">
                         <h1>Components</h1>
                     </div>
