--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh37Xc0jk=" crossorigin="anonymous"></script>
 
     <link rel="shortcut icon" href="favicon.png" type="image/png">
 
@@ -77,13 +77,14 @@
                         </span>
                     </div>
                 </div>
-                <div id="author">
-                    <span>
+                <div id="credits">
+                    <span id="smallText">
+                        Concept by
+                    </span>
+                    <span id="author">
                         <a id="visit" href="https://github.com/volperoid">
-                            <i class="fab fa-github"></i>
+                            <i class="fab fa-github"><span id="dot">&bull;</span>Volperoid</i>
                         </a>
-                        <span class="crimson-fg">&bull;</span>
-                        By Volperoid
                     </span>
                 </div>
             </div>
@@ -94,32 +95,20 @@
 
     <main>
 
-        <!-- * Section 0 -->
+        <!-- * Heading 0 -->
 
-        <div id="section-0" class="section">
-            <div class="dot-box">
-                <div class="dots-3">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-                <div class="dots-2">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-                <div class="dots-1">
-                    <div class="dot"></div>
-                </div>
+        <div class="heading">
+            <div id="heading-0">
+                <h2>
+                    PRODUCTS
+                </h2>
             </div>
-            <h1>
-                PRODUCTS
-            </h1>
         </div>
         <div class="accordion">
             <div id="slide-0" class="slide">
                 <div class="description">
                     <div class="category">
-                        <h1>Urban</h1>
+                        <h3>Urban</h3>
                     </div>
                     <div class="info">
                         <p>The perfect ballance between performance, comfort, and convenience. These machines have been designed to help you traverse the concrete jungle like never before.</p>
@@ -132,7 +121,7 @@
             <div id="slide-1" class="slide">
                 <div class="description">
                     <div class="category">
-                        <h1>Continental</h1>
+                        <h3>Continental</h3>
                     </div>
                     <div class="info">
                         <p>Come hell or high water, these heavy-duty machines will take you anywhere.</p>
@@ -145,7 +134,7 @@
             <div id="slide-2" class="slide">
                 <div class="description">
                     <div class="category">
-                        <h1>Performance</h1>
+                        <h3>Performance</h3>
                     </div>
                     <div class="info">
                         <p>Designed to push engines past their limits, these beasts eat through air resistance and fuel in equal measure.</p>
@@ -158,7 +147,7 @@
             <div id="slide-3" class="slide">
                 <div class="description">
                     <div class="category">
-                        <h1>Vintage</h1>
+                        <h3>Vintage</h3>
                     </div>
                     <div class="info">
                         <p>For those who seek a more classic experience, go down memory lane with these automobiles that aged like fine wine.</p>
@@ -171,7 +160,7 @@
             <div id="slide-4" class="slide">
                 <div class="description">
                     <div class="category">
-                        <h1>Components</h1>
+                        <h3>Components</h3>
                     </div>
                     <div class="info">
                         <p>Everything you will ever need for your set of wheels, and then some. We've got it all, down to the last screw.</p>
@@ -183,33 +172,21 @@
             </div>
         </div>
 
-        <!-- * Section 1 -->
+        <!-- * Heading 1 -->
 
-        <div id="section-1" class="section">
-            <div class="dot-box">
-                <div class="dots-3">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-                <div class="dots-2">
-                    <div class="dot"></div>
-                    <div class="dot"></div>
-                </div>
-                <div class="dots-1">
-                    <div class="dot"></div>
-                </div>
+        <div class="heading">
+            <div id="heading-1">
+                <h2>
+                    BRANDS
+                </h2>
             </div>
-            <h1>
-                BRANDS
-            </h1>
         </div>
     </main>
 
     <!-- * Navigator -->
 
     <div id="nav-arrow">
-        <a href="#section-0">
+        <a href="#heading-0">
             <!--
             <span class="material-icons-round">
                 expand_more
