--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         Concept by
                     </span>
                     <span id="author">
-                        <a id="visit" href="https://github.com/volperoid">
-                            <i class="fab fa-github"><span id="dot">&bull;</span>Volperoid</i>
+                        <a href="https://github.com/volperoid">
+                            <i class="fab fa-github"> <span id="dot">&bull;</span> <span id="gitName">Volperoid</span></i>
                         </a>
                     </span>
                 </div>
