--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
 
         <!-- * Heading 0 -->
 
-        <div class="heading">
-            <div id="heading-0">
+        <div id="heading-0" class="heading">
+            <div id="heading-border">
                 <h2>
                     PRODUCTS
                 </h2>
@@ -174,12 +174,16 @@
 
         <!-- * Heading 1 -->
 
-        <div class="heading">
-            <div id="heading-1">
+        <div id="heading-1" class="heading">
+            <div id="heading-border">
                 <h2>
                     BRANDS
                 </h2>
             </div>
+        </div>
+
+        <div id="brands">
+            
         </div>
     </main>
 
