toned down animations

--- a/index.html
+++ b/index.html
@@ -106,6 +106,9 @@
         </div>
         <div class="accordion">
             <div id="slide-0" class="slide">
+                <div class="ui-hint">
+                    <span>view</span>
+                </div>
                 <div class="description">
                     <div class="category">
                         <h3>Urban</h3>
@@ -116,9 +119,15 @@
                     <div class="explore">
                         <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
+                    <span class="material-icons-outlined close-btn">
+                        close
+                    </span>
                 </div>
             </div>
             <div id="slide-1" class="slide">
+                <div class="ui-hint">
+                    <span>view</span>
+                </div>
                 <div class="description">
                     <div class="category">
                         <h3>Continental</h3>
@@ -129,9 +138,15 @@
                     <div class="explore">
                         <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
+                    <span class="material-icons-outlined close-btn">
+                        close
+                    </span>
                 </div>
             </div>
             <div id="slide-2" class="slide">
+                <div class="ui-hint">
+                    <span>view</span>
+                </div>
                 <div class="description">
                     <div class="category">
                         <h3>Performance</h3>
@@ -142,9 +157,15 @@
                     <div class="explore">
                         <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
+                    <span class="material-icons-outlined close-btn">
+                        close
+                    </span>
                 </div>
             </div>
             <div id="slide-3" class="slide">
+                <div class="ui-hint">
+                    <span>view</span>
+                </div>
                 <div class="description">
                     <div class="category">
                         <h3>Vintage</h3>
@@ -155,9 +176,15 @@
                     <div class="explore">
                         <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
+                    <span class="material-icons-outlined close-btn">
+                        close
+                    </span>
                 </div>
             </div>
             <div id="slide-4" class="slide">
+                <div class="ui-hint">
+                    <span>view</span>
+                </div>
                 <div class="description">
                     <div class="category">
                         <h3>Components</h3>
@@ -168,6 +195,9 @@
                     <div class="explore">
                         <a class="link-btn" href="catalogue.html">Explore</a>
                     </div>
+                    <span class="material-icons-outlined close-btn">
+                        close
+                    </span>
                 </div>
             </div>
         </div>
@@ -183,7 +213,7 @@
         </div>
 
         <div id="brands">
-            
+
         </div>
     </main>
 
