--- a/index.html
+++ b/index.html
@@ -5,106 +5,98 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh37Xc0jk=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
-    <link rel="shortcut icon" href="favicon.png" type="image/png">
+    <link rel="shortcut icon" href="favicon.ico" type="image/ico">
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dosis:wght@200&family=Poiret+One&family=Varela+Round&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 
 
     <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/classes.css">
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/home.css">
 
-    <title>Document</title>
+    <title>Centrale 8</title>
 </head>
 <body>
-
-    <!-- * Front Cover -->
-
     <header>
-        <div id="container">
-            <div id="banner">
-                <div id="logo">
-                    <div>
-                        <span id="glyph-0">
-                            C
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-1">
-                            E
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-2">
-                            N
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-3">
-                            T
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-4">
-                            R
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-5">
-                            A
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-6">
-                            L
-                        </span>
-                    </div>
-                    <div>
-                        <span id="glyph-7">
-                            E
-                        </span>
-                    </div>
-                    <div id="glyph-8">
-                        <span>
-                            8
-                        </span>
-                    </div>
-                </div>
-                <div id="credits">
-                    <span id="smallText">
-                        Concept by
-                    </span>
-                    <span id="author">
-                        <a href="https://github.com/volperoid">
-                            <i class="fab fa-github"> <span id="dot">&bull;</span> <span id="gitName">Volperoid</span></i>
-                        </a>
+        <div id="banner">
+            <div id="logo">
+                <div>
+                    <span id="glyph-0">
+                        C
                     </span>
                 </div>
+                <div>
+                    <span id="glyph-1">
+                        E
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-2">
+                        N
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-3">
+                        T
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-4">
+                        R
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-5">
+                        A
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-6">
+                        L
+                    </span>
+                </div>
+                <div>
+                    <span id="glyph-7">
+                        E
+                    </span>
+                </div>
+                <div id="glyph-8">
+                    <span>
+                        8
+                    </span>
+                </div>
+            </div>
+            <a id="credits" href="https://github.com/volperoid">
+                <span id="smallText">
+                    Concept by
+                </span>
+                <span id="largeText">
+                    <i class="fab fa-github"></i>volperoid
+                </span>
+            </a>
+            <div id="nav-arrow">
+                <a href="#section-0">
+                    <i class="fas fa-angle-down fa-3x"></i>
+                </a>
             </div>
         </div>
     </header>
-
-    <!-- * Categories -->
-
     <main>
 
-        <!-- * Heading 0 -->
+        <!-- * Section-0 -->
 
         <div id="heading-0" class="heading">
-            <div id="heading-border">
-                <h2>
-                    PRODUCTS
-                </h2>
-            </div>
+            <h2>
+                GALLERY
+            </h2>
         </div>
-        <div class="accordion">
+        <section id="section-0">
             <div id="slide-0" class="slide">
                 <div class="ui-hint">
                     <span>view</span>
@@ -200,35 +192,37 @@
                     </span>
                 </div>
             </div>
-        </div>
+        </section>
 
-        <!-- * Heading 1 -->
+        <!-- * Section 1 -->
 
         <div id="heading-1" class="heading">
-            <div id="heading-border">
-                <h2>
-                    BRANDS
-                </h2>
+            <h2>
+                BRANDS
+            </h2>
+        </div>
+        <section id="section-1">
+            <div id="scrollFrame">
+                <div id="brands">
+                    <div id="audi" class="brand"></div>
+                    <div id="bugatti" class="brand"></div>
+                    <div id="ford" class="brand"></div>
+                    <div id="jeep" class="brand"></div>
+                    <div id="lamborghini" class="brand"></div>
+                    <div id="lincoln" class="brand"></div>
+                    <div id="mercedesBenz" class="brand"></div>
+                    <div id="mitsubishi" class="brand"></div>
+                    <div id="nissan" class="brand"></div>
+                    <div id="peugeot" class="brand"></div>
+                    <div id="porsche" class="brand"></div>
+                    <div id="rollsRoyce" class="brand"></div>
+                    <div id="tesla" class="brand"></div>
+                    <div id="toyota" class="brand"></div>
+                    <div id="volkswagen" class="brand"></div>
+                </div>
             </div>
-        </div>
-
-        <div id="brands">
-
-        </div>
+        </section>
     </main>
-
-    <!-- * Navigator -->
-
-    <div id="nav-arrow">
-        <a href="#heading-0">
-            <!--
-            <span class="material-icons-round">
-                expand_more
-            </span>
-            -->
-            <i class="fas fa-angle-down fa-3x"></i>
-        </a>
-    </div>
 
     <!-- * Widgets -->
 
