--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,7 @@
     <link rel="shortcut icon" href="media/png/blob.png" type="image/png">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/calculator.css">
+    <link rel="stylesheet" href="styles/calculator.css">
 </head>
 <body>
     <div id="calculator">
