added carousel nav arrows

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             </h2>
         </div>
         <section id="section-1">
+            <i class="fas fa-angle-left"></i>
             <div id="brands">
                 <div id="audi" class="brand"></div>
                 <div id="bugatti" class="brand"></div>
@@ -219,6 +220,7 @@
                 <div id="lamborghini" class="brand"></div>
                 <div id="ford" class="brand"></div>
             </div>
+            <i class="fas fa-angle-right"></i>
         </section>
     </main>
 
