--- a/index.html
+++ b/index.html
@@ -222,28 +222,36 @@
             </div>
             <i class="fas fa-angle-right"></i>
         </section>
-    </main>
-
-    <!-- * Widgets -->
-    <!--
-    <div id="widget-0">
-        <span id="arrow" class="icon material-icons-outlined">
-            arrow_left
-        </span>
-        <div id="toggle">
-            <button id="dark" type="button">
-                <span class="icon material-icons-outlined">
-                    dark_mode
-                </span>
-            </button>
-            <button id="light" type="button">
-                <span class="icon material-icons-outlined">
-                    light_mode
-                </span>
-            </button>
+        <div id="heading-2" class="heading">
+            <h2>
+                STORE LOCATOR
+            </h2>
         </div>
-    </div>
-    -->
+        <div id="heading-3" class="heading">
+            <h2>
+                OUR TEAM
+            </h2>
+        </div>
+    </main>
+    <footer>
+        <div id="links">
+
+        </div>
+        <div class="separator">
+            <div class="top"></div>
+            <div class="bottom"></div>
+        </div>
+        <div id="contact">
+
+        </div>
+        <div class="separator">
+            <div class="top"></div>
+            <div class="bottom"></div>
+        </div>
+        <div id="about">
+
+        </div>
+    </footer>
     <script src="js/webworks.js"></script>
 </body>
 </html>
